@@ -1,3 +1,4 @@
+* [Bug 912] detect conflicting enable/disable configuration on interfaces sharing an IP address
 * [Bug 771] compare scopeid if available for IPv6 addresses
 * [Bug 899] Only show -i/--jaildir -u/--user options if we HAVE_DROPROOT.
 * [Bug 916] 'cryptosw' is undefined if built without OpenSSL.
